# dustpylib

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  meson.build  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: joss_draft_pdf.yaml  unit_tests.yaml  unit_tests.yml
docs/: requirements.txt
docs/source/: A_contrib_bug_feature.ipynb  api.rst  backreaction.ipynb  conf.py  dynamics.rst  grid.rst  grid_refinement.ipynb  index.rst  planetary_gaps.ipynb  planetesimal_formation.ipynb  planetesimals.rst  radmc3d.ipynb  radtrans.rst  slab.ipynb  substructures.rst
dustpylib/: __init__.py  meson.build
dustpylib/dynamics/: __init__.py  meson.build
dustpylib/dynamics/backreaction/: __init__.py  functions_backreaction.py  (+2 more)
dustpylib/grid/: __init__.py  meson.build
dustpylib/planetesimals/: __init__.py  meson.build
dustpylib/radtrans/: __init__.py  meson.build
dustpylib/substructures/: __init__.py  meson.build
examples/backreaction/: Example_BackreactionStudy.ipynb  Example_SetupBackreaction.ipynb
examples/dynamics/: backreaction.ipynb
examples/grid/: grid_refinement.ipynb
examples/planetesimals/: planetesimal_formation.ipynb
examples/radtrans/: radmc3d.ipynb  slab.ipynb
examples/substructures/: planetary_gaps.ipynb
paper/joss/: paper.bib  paper.md
tests/dynamics/: test_backreaction.py
tests/grid/: test_refinement.py
tests/planetesimals/: test_formation.py
tests/radtrans/: test_radmc3d.py  test_slab.py
tests/substructures/: test_gaps.py
(+20 files in other folders)
